Test build those drafts

--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -57,20 +57,20 @@ jobs:
           du -sh drafts.pdf
 
       - uses: actions/upload-artifact@v4
-        if: github.event_name == 'pull_request'
+        # if: github.event_name == 'pull_request'
         with:
           name: drafts
           path: draft-scenarios/drafts.pdf
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
       - name: Move file
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           mkdir drafts
           mv drafts.pdf drafts/drafts.pdf
 
       - name: Install magick
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           sudo add-apt-repository universe
           sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
@@ -82,16 +82,16 @@ jobs:
           sed -i 's/magick/\.\/magick/g' tools/to_monochrome.sh
 
       - name: Adjust map files for monochrome buld
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           find . -name "*tex" -exec grep -Po "maps[^}]*\.png" '{}' \; | while IFS= read -r IMG; do
+            echo "Converting assets/${IMG}"
             IMG="../assets/${IMG}"
-            echo "Converting $IMG"
             tools/to_monochrome.sh "$IMG"
           done
 
       - name: Compile monochrome draft book
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         uses: xu-cheng/latex-action@v3
         with:
           extra_system_packages: "inkscape"
@@ -101,7 +101,7 @@ jobs:
           root_file: drafts.tex
 
       - name: Optimize PDF
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           du -sh drafts.pdf
           gs -o drafts_optimized.pdf \
@@ -114,7 +114,7 @@ jobs:
           du -sh drafts.pdf
 
       - name: Move file
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: mv drafts.pdf drafts/drafts-mono.pdf
 
       - uses: actions/upload-artifact@v4
