Monochrome build fixes (#183)

--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -74,31 +74,20 @@ jobs:
         run: |
           sudo add-apt-repository universe
           sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
+          # apt has v6, while v7 is required, hence downloading AppImage
           wget --quiet ${{ env.IMAGEMAGICK_URL }}
           find . -name "ImageMagick*" -exec mv '{}' magick \;
           chmod a+x magick
+          # Adjust script to use AppImage
+          sed -i 's/magick/\.\/magick/g' ../tools/to_monochrome.sh
 
       - name: Adjust map files for monochrome buld
         if: github.event_name != 'pull_request'
         run: |
-          find . -name "*tex" -exec grep -o "maps.*png" '{}' \; | while IFS= read -r IMG; do
+          find . -name "*tex" -exec grep -Po "maps[^}]*\.png" '{}' \; | while IFS= read -r IMG; do
+            echo "Converting assets/${IMG}"
             IMG="../assets/${IMG}"
-            TEMP_DIR=$(mktemp -d)
-            ALPHA="${TEMP_DIR}/alpha.png"
-            PROCESSED="${TEMP_DIR}/processed.png"
-
-            # Extract alpha channel
-            ./magick "${IMG}" -alpha extract "${ALPHA}"
-
-            # Adjust map images
-            ./magick "${IMG}" -negate -threshold 50% -negate -fill white -opaque black "${PROCESSED}"
-            ./magick "${PROCESSED}" -morphology Dilate Diamond:2 "${PROCESSED}"
-            ./magick "${PROCESSED}" -channel RGB -negate "${PROCESSED}"
-
-            # Recombine with original alpha
-            ./magick "${PROCESSED}" "${ALPHA}" -alpha off -compose CopyOpacity -composite "${IMG}"
-
-            rm -rf "${TEMP_DIR}"
+            ../tools/to_monochrome.sh "$IMG"
           done
 
       - name: Compile monochrome draft book
