--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -27,32 +27,20 @@ jobs:
         run: |
           sudo add-apt-repository universe
           sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
+          # apt has v6, while v7 is required, hence downloading AppImage
           wget --quiet ${{ env.IMAGEMAGICK_URL }}
           find . -name "ImageMagick*" -exec mv '{}' magick \;
           chmod a+x magick
+          # Adjust script to use AppImage
+          sed -i 's/magick/\.\/magick/g' tools/to_monochrome.sh
 
       - name: Adjust map files for monochrome buld
         run: |
           find . -type f -name "*tex" -not -regex ".*/\(draft-scenarios\|translated\|svg-inkscape\|templates\)/.*" \
-            -exec grep -o "maps.*png" '{}' \; | while IFS= read -r IMG; do
+            -exec grep -Po "maps[^}]*\.png" '{}' \; | while IFS= read -r IMG; do
             IMG="assets/${IMG}"
             echo "Converting ${IMG}"
-            TEMP_DIR=$(mktemp -d)
-            ALPHA="${TEMP_DIR}/alpha.png"
-            PROCESSED="${TEMP_DIR}/processed.png"
-
-            # Extract alpha channel
-            ./magick "${IMG}" -alpha extract "${ALPHA}"
-
-            # Adjust map images
-            ./magick "${IMG}" -negate -threshold 50% -negate -fill white -opaque black "${PROCESSED}"
-            ./magick "${PROCESSED}" -morphology Dilate Diamond:2 "${PROCESSED}"
-            ./magick "${PROCESSED}" -channel RGB -negate "${PROCESSED}"
-
-            # Recombine with original alpha
-            ./magick "${PROCESSED}" "${ALPHA}" -alpha off -compose CopyOpacity -composite "${IMG}"
-
-            rm -rf "${TEMP_DIR}"
+            tools/to_monochrome.sh "$IMG"
           done
 
       - name: Move changed files
@@ -156,7 +144,7 @@ jobs:
           mkdir ${{ matrix.language }}
           mv main_${{ matrix.language }}.pdf ${{ matrix.language }}
 
-      - name: Download monoochrome maps
+      - name: Download monochrome maps
         if: github.event_name != 'pull_request'
         uses: actions/download-artifact@v4
         with:
