--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -4,12 +4,12 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'draft-scenarios/**'
+    # paths:
+    #   - 'draft-scenarios/**'
   pull_request:
     branches: [main]
-    paths:
-      - 'draft-scenarios/**'
+    # paths:
+    #   - 'draft-scenarios/**'
 
 env:
   ARTIFACT_RETENTION_DAYS: 1
@@ -64,13 +64,13 @@ jobs:
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
       - name: Move file
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           mkdir drafts
           mv drafts.pdf drafts/drafts.pdf
 
       - name: Install magick
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           sudo add-apt-repository universe
           sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
@@ -78,11 +78,10 @@ jobs:
           wget --quiet ${{ env.IMAGEMAGICK_URL }}
           find . -name "ImageMagick*" -exec mv '{}' magick \;
           chmod a+x magick
-          # Adjust script to use AppImage
           sed -i 's/magick/\.\/magick/g' ../tools/to_monochrome.sh
 
       - name: Adjust map files for monochrome buld
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           find . -name "*tex" -exec grep -Po "maps[^}]*\.png" '{}' \; | while IFS= read -r IMG; do
             echo "Converting assets/${IMG}"
@@ -91,7 +90,7 @@ jobs:
           done
 
       - name: Compile monochrome draft book
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         uses: xu-cheng/latex-action@v3
         with:
           extra_system_packages: "inkscape"
@@ -101,7 +100,7 @@ jobs:
           root_file: drafts.tex
 
       - name: Optimize PDF
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: |
           du -sh drafts.pdf
           gs -o drafts_optimized.pdf \
@@ -113,12 +112,19 @@ jobs:
           mv drafts_optimized.pdf drafts.pdf
           du -sh drafts.pdf
 
+      - uses: actions/upload-artifact@v4
+        if: github.event_name == 'pull_request'
+        with:
+          name: drafts-mono
+          path: draft-scenarios/drafts.pdf
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
       - name: Move file
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         run: mv drafts.pdf drafts/drafts-mono.pdf
 
       - name: Publish drafts in artifacts repository
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         uses: peaceiris/actions-gh-pages@v4
         with:
           deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
