--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -29,10 +29,7 @@ jobs:
           sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
           # apt has v6, while v7 is required, hence downloading AppImage
           wget --quiet ${{ env.IMAGEMAGICK_URL }}
-          find . -name "ImageMagick*" -exec chmod a+x '{}' \; -exec mv '{}' /usr/local/bin/magick \;
-          # chmod a+x magick
-          # # Adjust script to use AppImage
-          # sed -i 's/magick/\.\/magick/g' tools/to_monochrome.sh
+          find . -name "ImageMagick*" -exec chmod +x '{}' \; -exec mv '{}' /usr/local/bin/magick \;
 
       - name: Adjust map files for monochrome buld
         run: |
