Add scenario to po4a

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -13,6 +13,7 @@
 [type: latex] clash/force_of_will.tex $lang:clash/translated/$lang/force_of_will.tex
 [type: latex] clash/the_hunt.tex $lang:clash/translated/$lang/the_hunt.tex
 [type: latex] clash/dragoncurse_castle.tex $lang:clash/translated/$lang/dragoncurse_castle.tex
+[type: latex] clash/the_fractured_kingdoms.tex $lang:clash/translated/$lang/the_fractured_kingdoms.tex
 
 [type: latex] campaigns/inferno_devilish_plan.tex $lang:campaigns/translated/$lang/inferno_devilish_plan.tex
 [type: latex] campaigns/inferno_steadwicks_fall.tex $lang:campaigns/translated/$lang/inferno_steadwicks_fall.tex
