Adjust release workflow to current repo state

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -10,9 +10,9 @@ on:
 env:
   ARTIFACT_RETENTION_DAYS: 1
   GHOSTSCRIPT_URL: https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs10030/gs_10.03.0_amd64_snap.tgz
-  PO4A_GH_URL: https://github.com/mquinson/po4a/releases/download
-  PO4A_VERSION: 0.73
   IMAGEMAGICK_URL: https://github.com/ImageMagick/ImageMagick/releases/download/7.1.1-46/ImageMagick-8209e84-gcc-x86_64.AppImage
+  PO4A_GH_URL: https://github.com/mquinson/po4a/releases/download
+  PO4A_VERSION: "0.73"
 
 jobs:
   build:
