--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -4,10 +4,11 @@ on:
   workflow_dispatch:
 
 env:
-  PO4A_VERSION: "0.73"
-  PO4A_GH_URL: https://github.com/mquinson/po4a/releases/download
-  GHOSTSCRIPT_URL: https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs10030/gs_10.03.0_amd64_snap.tgz
   ARTIFACT_RETENTION_DAYS: 1
+  GHOSTSCRIPT_URL: https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs10030/gs_10.03.0_amd64_snap.tgz
+  IMAGEMAGICK_URL: https://github.com/ImageMagick/ImageMagick/releases/download/7.1.1-46/ImageMagick-8209e84-gcc-x86_64.AppImage
+  PO4A_GH_URL: https://github.com/mquinson/po4a/releases/download
+  PO4A_VERSION: "0.73"
 
 jobs:
   build:
@@ -24,7 +25,6 @@ jobs:
             language_name: Polski
           - language: cs
             language_name: Cestina
-
     steps:
       - name: Set up repository
         uses: actions/checkout@v4
@@ -54,7 +54,7 @@ jobs:
           ARTIFACT_NAME="Heroes3_${{ matrix.language_name }}_Fan_Made_Mission_Book_${{ env.VERSION }}"
           echo "ARTIFACT_NAME=${ARTIFACT_NAME}" >> "$GITHUB_OUTPUT"
 
-      - name: Compile rule book
+      - name: Compile mission book
         uses: xu-cheng/latex-action@v3
         with:
           extra_system_packages: "inkscape"
@@ -72,6 +72,117 @@ jobs:
       - name: Rename file
         run: |
           mv "main_${{ matrix.language }}.pdf" "Heroes3_${{ matrix.language_name }}_Fan_Made_Mission_Book_${{ env.VERSION }}.pdf"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.artifact_name.outputs.artifact_name }}
+          path: "*.pdf"
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
+
+  make_maps_monochrome:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up repository
+        uses: actions/checkout@v4
+
+      - name: Install magick
+        run: |
+          sudo add-apt-repository universe
+          sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
+          # apt has v6, while v7 is required, hence downloading AppImage
+          wget --quiet ${{ env.IMAGEMAGICK_URL }}
+          find . -name "ImageMagick*" -exec chmod +x '{}' \; -exec mv '{}' /usr/local/bin/magick \;
+
+      - name: Adjust map files for monochrome buld
+        run: |
+          find . -type f -name "*tex" -not -regex ".*/\(draft-scenarios\|translated\|svg-inkscape\|templates\)/.*" \
+            -exec grep -Po "maps[^}]*\.png" '{}' \; | while IFS= read -r IMG; do
+            IMG="assets/${IMG}"
+            echo "Converting ${IMG}"
+            tools/to_monochrome.sh "$IMG"
+          done
+
+      - name: Move changed files
+        run: |
+          mkdir monochrome
+          git status --porcelain assets | awk '{print $2}' | xargs mv -t monochrome
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: monochrome-maps
+          path: monochrome
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
+
+  build_monochrome:
+    needs: [make_maps_monochrome]
+    runs-on: ubuntu-latest
+    outputs:
+      artifact_name: ${{ steps.artifact_name.outputs.artifact_name }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - language: en
+            language_name: English
+          - language: pl
+            language_name: Polski
+          - language: cs
+            language_name: Cestina
+
+    steps:
+      - name: Set up repository
+        uses: actions/checkout@v4
+
+      - name: Generate translations for ${{ matrix.language }}
+        if: ${{ matrix.language != 'en' }}
+        run: |
+          sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
+          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
+          export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
+          tar -xf ${PO4A_DIR}.tar.gz
+          export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
+          ./${PO4A_DIR}/po4a --no-update po4a.cfg
+
+      - name: Download monochrome maps
+        uses: actions/download-artifact@v4
+        with:
+          name: monochrome-maps
+          path: assets/maps
+
+      - name: Create artifact name
+        id: artifact_name
+        run: |
+          ARTIFACT_NAME="Heroes3_${{ matrix.language_name }}_Fan_Made_Mission_Book_${{ env.VERSION }}-monochrome"
+          echo "ARTIFACT_NAME=${ARTIFACT_NAME}" >> "$GITHUB_OUTPUT"
+
+      - name: Compile monochrome mission book
+        uses: xu-cheng/latex-action@v3
+        with:
+          extra_system_packages: "inkscape"
+          latexmk_use_lualatex: true
+          latexmk_shell_escape: true
+          pre_compile: export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
+          root_file: main_${{ matrix.language }}.tex
+
+      - name: Install ghostscript
+        run: |
+          echo ${{ env.GHOSTSCRIPT_URL }}
+          wget --quiet ${{ env.GHOSTSCRIPT_URL }}
+          tar -xvf *_amd64_snap.tgz
+          sudo snap install ./*_amd64_snap/*_amd64.snap --devmode
+
+      - name: Optimize PDF
+        run: |
+          du -sh main_${{ matrix.language }}.pdf
+          tools/optimize.sh ${{ matrix.language }}
+          mv main_${{ matrix.language }}_optimized.pdf main_${{ matrix.language }}.pdf
+          du -sh main_${{ matrix.language }}.pdf
+
+      - name: Rename file
+        run: |
+          mv "main_${{ matrix.language }}.pdf" "Heroes3_${{ matrix.language_name }}_Fan_Made_Mission_Book_${{ env.VERSION }}-monochrome.pdf"
 
       - uses: actions/upload-artifact@v4
         with:
