--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -87,21 +87,6 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@v4
 
-      - name: Download ImageMagick
-        run: |
-          sudo add-apt-repository universe
-          sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
-          # apt has v6, while v7 is required, hence downloading AppImage
-          wget --quiet ${{ env.IMAGEMAGICK_URL }}
-          find . -name "ImageMagick*" -exec chmod +x '{}' \; -exec mv '{}' magick \;
-
-      - name: Upload ImageMagick binary
-        uses: actions/upload-artifact@v4
-        with:
-          name: imagemagick-binary
-          path: magick
-          retention-days: 1
-
       - name: Find map files
         id: set-matrix
         run: |
@@ -119,11 +104,13 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@v4
 
-      - name: Download ImageMagick binary
-        uses: actions/download-artifact@v4
-        with:
-          name: imagemagick-binary
-          path: /usr/local/bin
+      - name: Install magick
+        run: |
+          sudo add-apt-repository universe
+          sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
+          # apt has v6, while v7 is required, hence downloading AppImage
+          wget --quiet ${{ env.IMAGEMAGICK_URL }}
+          find . -name "ImageMagick*" -exec chmod +x '{}' \; -exec mv '{}' /usr/local/bin/magick \;
 
       - name: Process map file
         run: |
@@ -133,8 +120,8 @@ jobs:
       - name: Upload processed file
         uses: actions/upload-artifact@v4
         with:
-          name: monochrome-${{ matrix.map }}
-          path: assets/maps/${{ matrix.map }}
+          name: monochrome-map-${{ hashFiles(format('assets/{0}', matrix.map)) }}
+          path: assets/${{ matrix.map }}
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build_monochrome:
@@ -216,7 +203,10 @@ jobs:
           path: "*.pdf"
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
+  delete_artifacts:
+    runs-on: ubuntu-latest
+    needs: [build_monochrome]
+    steps:
       - uses: geekyeggo/delete-artifact@v5
         with:
           name: monochrome-map-*
-          failOnError: false
